[package]
name = "distance-oracle"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "distance-oracle"
required-features = ["standalone"]

[features]
default = ["standalone", "std"]
standalone = ["clap", "tokio"]
std = [
	"codec/std",
	"fnv/std",
	"hex/std",
	"log/std",
	"num-traits/std",
	"sp-core/std",
	"sp-distance/std",
	"sp-runtime/std",
]
try-runtime = ["sp-distance/try-runtime", "sp-runtime/try-runtime"]
runtime-benchmarks = []

[dependencies]
clap = { workspace = true, features = ["derive"], optional = true }
codec = { workspace = true }
fnv = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
simple_logger = { workspace = true }
sp-core = { workspace = true }
sp-distance = { workspace = true }
sp-runtime = { workspace = true }
subxt = { workspace = true, features = [
	"substrate-compat",
	"native",
	"jsonrpsee",
] }
tokio = { workspace = true, features = [
	"rt-multi-thread",
	"macros",
], optional = true }

[dev-dependencies]
bincode = { workspace = true }
dubp-wot = { workspace = true }
flate2 = { workspace = true, features = ["zlib-ng-compat"] }
