[package]
authors.workspace = true
description = "duniter end2end tests"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "duniter-end2end-tests"
repository.workspace = true
version.workspace = true

[[test]]
name = "cucumber_tests"
harness = false         # allows Cucumber to print output instead of libtest

[features]
default = ["std"]
std = [
	"anyhow/std",
	"codec/std",
	"distance-oracle/std",
	"hex/std",
	"serde_json/std",
	"sp-core-hashing/std",
	"sp-core/std",
	"sp-runtime/std",
]
standalone = ["distance-oracle/standalone"]
try-runtime = ["distance-oracle/try-runtime", "sp-runtime/try-runtime"]
runtime-benchmarks = []

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
codec = { workspace = true }
ctrlc = { workspace = true }
cucumber = { workspace = true, features = ["macros"] }
distance-oracle = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
portpicker = { workspace = true }
serde_json = { workspace = true }
sp-core = { workspace = true }
sp-core-hashing = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
subxt = { workspace = true, features = [
	"substrate-compat",
	"native",
	"jsonrpsee",
] }
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
