[package]
authors = ['Axiom-Team Developers <https://axiom-team.fr>']
description = 'lc-core integration tests.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'AGPL-3.0'
name = 'lc-core-integration-tests'
repository = 'https://git.duniter.org/nodes/rust/lc-core-substrate'
version = '3.0.0'

[dev-dependencies]
env_logger = "0.9.0"
parity-scale-codec = "2.3.1"
portpicker = "0.1.1"
serde_json = "1.0.64"
subxt = { git = 'https://github.com/librelois/subxt.git', branch = 'duniter-monthly-2022-01' }
tokio = { version = "1.15.0", features = ["macros"] }

# substrate dev-dependencies
sp-keyring = { git = "https://github.com/librelois/substrate.git", branch = "duniter-monthly-2022-01" }
