[package]
authors.workspace = true
description = "duniter live tests"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "duniter-live-tests"
repository.workspace = true
version.workspace = true

[dev-dependencies]
anyhow = { workspace = true }
codec = { workspace = true }
countmap = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
subxt = { workspace = true, features = [
    "native",
    "jsonrpsee",
] }
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }

[features]
runtime-benchmarks = []
std = []
try-runtime = []
