[package]
authors = ['Axiom-Team Developers <https://axiom-team.fr>']
build = 'build.rs'
description = 'Crypto-currency software (based on Substrate framework) to operate Ğ1 libre currency'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'AGPL-3.0'
name = 'duniter'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'duniter'

[features]
default = ["gdev"]
g1 = ["g1-runtime"]
gdev = ["gdev-runtime"]
gtest = ["gtest-runtime"]
runtime-benchmarks = [
	'g1-runtime',
	'g1-runtime/runtime-benchmarks',
	'gdev-runtime',
	'gdev-runtime/runtime-benchmarks',
	'gtest-runtime',
	'gtest-runtime/runtime-benchmarks',
]

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/librelois/substrate.git', branch = 'duniter-monthly-2022-01' }

# substrate dev-dependencies
sp-keyring = { git = "https://github.com/librelois/substrate.git", branch = "duniter-monthly-2022-01" }

[dependencies]

# local dependencies
common-runtime = { path = '../runtime/common' }
g1-runtime = { path = '../runtime/g1', optional = true }
gdev-runtime = { path = '../runtime/gdev', optional = true }
gtest-runtime = { path = '../runtime/gtest', optional = true }
pallet-certification = { path = '../pallets/certification' }
sp-membership = { path = '../primitives/membership' }

# crates.io dependencies
async-io = "1.3"
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = '18.0.0'
log = "0.4"
maplit = '1.0.2'
serde_json = "1.0.64"
structopt = '0.3.8'

# substrate dependencies

[dependencies.frame-benchmarking]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.pallet-grandpa]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-basic-authorship]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-chain-spec]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-client-api]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-consensus]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.babe]
package = "sc-consensus-babe"
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-consensus-manual-seal]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-consensus-uncles]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-keystore]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-rpc]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-rpc-api]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-telemetry]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-transaction-pool]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-api]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-authority-discovery]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-block-builder]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-blockchain]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-consensus]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-consensus-babe]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-core]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-offchain]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-inherents]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-runtime]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-session]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-storage]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-timestamp]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-transaction-pool]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.sp-trie]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/librelois/substrate.git'
branch = 'duniter-monthly-2022-01'
